# RMonetDB

./: ChangeLog  DESCRIPTION  INSTALL  NAMESPACE  README  build.sh  check.sh  clean.sh  configure  configure.ac  configure.in  db.yml  install_dependencies.R  install_dependencies.sh  run_tests.R
R/: RMonetDB.R
man/: RMonetDB-package.Rd  RMonetDBClose.Rd  RMonetDBCommit.Rd  RMonetDBConnect.Rd  RMonetDBExecute.Rd  RMonetDBExists.Rd  RMonetDBGetInfo.Rd  RMonetDBIsConnected.Rd  RMonetDBListFields.Rd  RMonetDBListTables.Rd  RMonetDBLoadDataFrame.Rd  RMonetDBQuery.Rd  RMonetDBQuote.Rd  RMonetDBRollback.Rd  RMonetDBStartTransaction.Rd  RMonetDBUnQuote.Rd
src/: Makevars.in  Makevars.win  RMonetDB.c
tests/: 1.R  2.R  3.R  4.R  5.R  6.R
